gitops/apps/home-assistant/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
spec:
  type: ClusterIP
  ports:
  - port: 8123
    targetPort: 8123
    protocol: TCP
    name: http
  selector:
    app: home-assistant
